<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.skyfishjy.library.RippleBackground xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/fading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:rb_color="#0099CC"
                    app:rb_duration="3000"
                    app:rb_radius="20dp"
                    app:rb_rippleAmount="4"
                    app:rb_scale="6">

                    <FrameLayout
                        android:id="@+id/circle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_circle"
                        android:padding="3dp">

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/goButton"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@android:color/transparent" />

                        <TextView
                            android:id="@+id/goButtonText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:elevation="16dp"
                            android:text="@string/gobutton"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textColor="@android:color/white"
                            android:textSize="30dp"
                            android:textStyle="bold" />


                    </FrameLayout>
                </com.skyfishjy.library.RippleBackground>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/iconView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/valueView"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_clock" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_timer" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_calory" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/valueView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/kmText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="00"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="00:00:00"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/calText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="00"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/bottomLayout"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/distanceunit"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/caltext"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bottomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/bottomNav"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:src="@drawable/ic_lightning" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:src="@drawable/ic_donut" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:src="@drawable/ic_notifications" />


                    <ImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:src="@drawable/ic_person" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>